# Railway3D

./: .gitignore  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  pages.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: health.json
apps/web/scripts/: generate-synthetic-terrain.mjs
apps/web/src/: App.test.ts  App.tsx  main.tsx  styles.css
apps/web/src/app/: UrlStateSync.tsx  app-state.ts  app-store.tsx  url-state.test.ts  url-state.ts
apps/web/src/types/: luma-gl-core-shadertypes.d.ts
data/regions/jp/: tokyo-metro-pilot-corridor.json  tokyo-metro-source-audit.json
data/sample/gsi-dem/v1/: example-gsi-dem-grid.json
data/sample/n02/v1/: example-n02-inventory.json
e2e/: smoke.spec.ts
schemas/v1/: alignment.schema.json  control-point.schema.json  dataset.schema.json  line.schema.json  manifest.schema.json  operator.schema.json  profile.schema.json  route.schema.json  segment.schema.json  shared.schema.json  source.schema.json  station.schema.json
tools/pipeline/: README.md  pyproject.toml
tools/pipeline/src/railway3d_pipeline/: __init__.py  cli.py  control_points.py  corridor.py  diffing.py  gsi_dem.py  json_utils.py  n02.py  osm.py  packaging.py  schema_validation.py  source_adapters.py  source_audit.py  source_registry.py  synthetic.py
tools/pipeline/tests/: test_cli.py  test_control_points.py  test_corridor.py  test_gsi_dem.py  test_n02.py  test_osm.py  test_pipeline_build.py  test_schema_validation.py  test_source_audit.py
(+42 files in other folders)
